fix: working on mobile nav, installed icons module from nuxt

--- a/assets/style/global.scss
+++ b/assets/style/global.scss
@@ -8,6 +8,11 @@ $black: #000000;
 $white: #ffffff;
 $gray: #f2f2f2;
 $gray-dark-1: #201f1f;
+$gray-dark-2: #d0c9c9;
+
+$secondary: #e09d14;
 
 // sizes
 $text-sm: 0.75rem;
+// $text-sm: 0.75rem;
+$text-md: 1rem;
